--- a/app/src/main/res/layout/core_activity_login.xml
+++ b/app/src/main/res/layout/core_activity_login.xml
@@ -64,7 +64,8 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:text="@string/login_prompt"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                android:textAppearance="@style/Header"
+                android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/view" />
 
@@ -79,6 +80,8 @@
                 android:hint="Username"
                 android:inputType="textEmailAddress"
                 android:singleLine="true"
+                android:textAppearance="@style/Body"
+                android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
@@ -96,6 +99,8 @@
                 android:imeOptions="normal|actionGo"
                 android:inputType="textPassword"
                 android:singleLine="true"
+                android:textAppearance="@style/Body"
+                android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -112,8 +117,7 @@
                 android:background="@android:color/transparent"
                 android:onClick="SubmitLoginDetails"
                 android:text="Submit"
-                android:textColor="@color/colorPrimary"
-                android:textSize="18sp"
+                android:textAppearance="@style/Header"
                 android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
