--- a/app/src/main/res/layout/checkin_activity_member_list.xml
+++ b/app/src/main/res/layout/checkin_activity_member_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ch.amiv.checkin.MemberListActivity"
+    tools:context=".checkin.MemberListActivity"
     tools:layout_editor_absoluteY="81dp">
 
     <android.support.v7.widget.RecyclerView
