--- a/app/src/main/res/layout/checkin_list_item_header.xml
+++ b/app/src/main/res/layout/checkin_list_item_header.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:paddingLeft="12dp"
-        android:text="Header"
+        android:text=""
         android:textSize="24sp"
         android:textStyle="bold" />
 
