--- a/app/src/main/res/layout/checkin_list_item_stat.xml
+++ b/app/src/main/res/layout/checkin_list_item_stat.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:paddingLeft="12dp"
-            android:text="Stat"
+            android:text=""
             android:textSize="16sp" />
 
 
