--- a/app/src/main/res/layout/core_activity_event_detail.xml
+++ b/app/src/main/res/layout/core_activity_event_detail.xml
@@ -93,7 +93,7 @@
                             android:layout_marginLeft="16dp"
                             android:layout_marginRight="16dp"
                             android:text=""
-                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                            android:textAppearance="@style/Header"
                             android:textSize="30sp" />
 
                         <TextView
@@ -104,7 +104,7 @@
                             android:layout_marginRight="16dp"
                             android:paddingBottom="12dp"
                             android:text=""
-                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                            android:textAppearance="@style/Body"
                             android:textSize="16sp" />
 
                         <View
@@ -119,7 +119,7 @@
                             android:layout_marginLeft="16dp"
                             android:layout_marginRight="16dp"
                             android:text="@string/info_title"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                            android:textAppearance="@style/Header"
                             android:textSize="30sp" />
 
                         <LinearLayout
