--- a/app/src/main/res/layout/core_frag_event_detail.xml
+++ b/app/src/main/res/layout/core_frag_event_detail.xml
@@ -31,7 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text=""
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
+                android:textAppearance="@style/Header" />
 
             <TextView
                 android:id="@+id/eventDetail"
@@ -45,7 +45,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/register_title"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                android:textAppearance="@style/Header"
                 android:textSize="18sp" />
 
 
