--- a/app/src/main/res/layout/core_list_item_event.xml
+++ b/app/src/main/res/layout/core_list_item_event.xml
@@ -3,11 +3,13 @@
 
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list_item_event_constraint"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:visibility="visible">
+    android:visibility="visible"
+    android:background="?attr/selectableItemBackground">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -26,24 +28,54 @@
             android:gravity="center_vertical"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/titleField"
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="4dp"
-                android:paddingLeft="12dp"
-                android:paddingTop="8dp"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:layout_weight="1"
+                android:paddingLeft="14dp"
+                android:paddingTop="4dp">
+
+                <TextView
+                    android:id="@+id/titleField"
+                    style="@style/Subheader"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:gravity="left"
+                    android:maxLines="1"
+                    android:paddingEnd="32dp"
+                    android:text="Event Title"
+                    android:textAppearance="@style/Subheader"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/newTag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="2dp"
+                    android:gravity="top|start"
+                    android:text="NEW\u0020"
+                    android:textAppearance="@style/Subheader"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="12sp"
+                    android:visibility="visible"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/titleField"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </android.support.constraint.ConstraintLayout>
 
             <TextView
                 android:id="@+id/infoField"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:paddingBottom="8dp"
-                android:paddingLeft="14dp"
-                android:textSize="14sp" />
+                android:paddingLeft="16dp"
+                android:text="Event catchphrase"
+                android:textAppearance="@style/Body"
+                android:textColor="@color/textLightGray" />
         </LinearLayout>
 
         <TextView
@@ -51,9 +83,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="5"
-            android:gravity="right|center"
-            android:paddingLeft="6dp"
-            android:paddingRight="12dp"
+            android:gravity="end|center"
+            android:paddingStart="6dp"
+            android:paddingEnd="12dp"
             android:textAlignment="textEnd"
             android:textSize="18sp"
             android:textStyle="bold"
