--- a/app/src/main/res/layout/core_list_item_keyval.xml
+++ b/app/src/main/res/layout/core_list_item_keyval.xml
@@ -14,21 +14,21 @@
 
         <TextView
             android:id="@+id/keyField"
+            style="@style/Subheader"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text=""
-            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-            android:textSize="18sp" />
+            android:text="Key" />
 
         <TextView
             android:id="@+id/valueField"
+            style="@style/Body"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:paddingLeft="8dp"
-            android:text=""
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:text="Value"
+            android:textAppearance="@style/Body"
             android:textSize="16sp" />
     </LinearLayout>
 
