--- a/app/src/main/res/menu/checkin_ac_search_menu.xml
+++ b/app/src/main/res/menu/checkin_ac_search_menu.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/menuSearch"
         android:icon="@drawable/ic_search_32dp"
-        android:title="Search"
+        android:title="@string/search"
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="always" />
 </menu>
