--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,9 @@
         <item name="windowNoTitle">true</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
         <item name="colorControlNormal">@color/white</item>
+        <item name="android:editTextStyle">@style/TextViewStyle</item>
+        <item name="android:textViewStyle">@style/TextViewStyle</item>
+        <item name="android:titleTextStyle">@style/TextViewStyle</item>
     </style>
 
     <style name="AppThemeDark" parent="Theme.AppCompat.NoActionBar">
@@ -34,5 +37,26 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorSecondary</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <!-- Text Styles -->
+    <style name="TextViewStyle" parent="@android:style/TextAppearance.Widget.TextView">
+        <item name="android:textAppearance">@style/Body</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Header" parent="TextAppearance.AppCompat.Headline">
+        <item name="android:fontFamily">@font/din_pro_bold</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+
+    <style name="Subheader" parent="TextAppearance.AppCompat.Headline">
+        <item name="android:fontFamily">@font/din_pro_bold</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="Body" parent="Base.TextAppearance.AppCompat.Body1">
+        <item name="android:fontFamily">@font/din_pro_light</item>
+        <item name="android:textColor">@color/textLightGray</item>
     </style>
 </resources>
