--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
         <item name="android:editTextStyle">@style/TextViewStyle</item>
         <item name="android:textViewStyle">@style/TextViewStyle</item>
         <item name="android:titleTextStyle">@style/TextViewStyle</item>
+        <item name="android:textColorPrimary">@color/text_color_primary</item>
     </style>
 
     <style name="AppThemeDark" parent="Theme.AppCompat.NoActionBar">
