Added job offers page, need refactoring and more testing
Created job offers list, getting data from api, job detail page

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">12dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">156dp</dimen>
+    <dimen name="company_logo_height_detail">80dp</dimen>
 </resources>
