--- a/app/src/main/res/layout/checkin_activity_main.xml
+++ b/app/src/main/res/layout/checkin_activity_main.xml
@@ -97,7 +97,7 @@
         app:layout_constraintTop_toBottomOf="@+id/SubmitPin" />
 
     <ImageView
-        android:id="@+id/LogoImage"
+        android:id="@+id/logoImage"
         android:layout_width="wrap_content"
         android:layout_height="85dp"
         android:layout_marginBottom="8dp"
@@ -110,6 +110,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_amiv_logo" />
-
 
 </android.support.constraint.ConstraintLayout>
