--- a/app/src/main/res/layout/events_activity_detail.xml
+++ b/app/src/main/res/layout/events_activity_detail.xml
@@ -78,7 +78,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@android:color/white"
+                        android:background="?android:attr/colorBackground"
                         android:orientation="vertical">
 
                         <View
