--- a/app/src/main/res/layout/events_list_item_event.xml
+++ b/app/src/main/res/layout/events_list_item_event.xml
@@ -54,16 +54,15 @@
                     android:id="@+id/newTag"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
-                    android:layout_marginTop="2dp"
                     android:gravity="top|start"
                     android:text="NEW\u0020"
                     android:textAppearance="@style/Subheader"
                     android:textColor="@color/colorPrimary"
                     android:textSize="12sp"
                     android:visibility="visible"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintBottom_toBottomOf="@+id/titleField"
                     app:layout_constraintEnd_toEndOf="@+id/titleField"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="@+id/titleField" />
             </android.support.constraint.ConstraintLayout>
 
             <TextView
@@ -71,6 +70,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:ellipsize="end"
+                android:lineSpacingMultiplier="0.8"
+                android:maxLines="2"
                 android:paddingBottom="8dp"
                 android:paddingLeft="16dp"
                 android:text="Event catchphrase"
