--- a/app/src/main/res/menu/core_ac_main_bottom_nav.xml
+++ b/app/src/main/res/menu/core_ac_main_bottom_nav.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/bottom_nav_home"
+        android:id="@+id/bottom_nav_events"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_home" />
 
@@ -14,7 +14,12 @@
     -->
 
     <item
-        android:id="@+id/bottom_nav_events"
+        android:id="@+id/bottom_nav_notifications"
         android:icon="@drawable/ic_notifications"
         android:title="@string/title_notifications" />
+
+    <item
+        android:id="@+id/bottom_nav_jobs"
+        android:icon="@drawable/ic_suitcase"
+        android:title="@string/title_jobs" />
 </menu>
