--- a/app/src/main/res/layout/core_activity_login.xml
+++ b/app/src/main/res/layout/core_activity_login.xml
@@ -42,7 +42,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintWidth_max="wrap"
-                app:srcCompat="@mipmap/amiv_logo" />
+                app:srcCompat="@drawable/ic_amiv_logo" />
 
             <View
                 android:id="@+id/view"
@@ -59,7 +59,7 @@
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
@@ -123,6 +123,19 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/passwordField"
                 tools:ignore="HardcodedText" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/login_prompt_email"
+                android:textAppearance="@style/Subheader"
+                android:textColor="@color/textLightGray"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/submitLoginButton" />
 
 
         </android.support.constraint.ConstraintLayout>
