--- a/app/src/main/res/layout/core_toolbar.xml
+++ b/app/src/main/res/layout/core_toolbar.xml
@@ -28,7 +28,7 @@
                 android:paddingBottom="8dp"
                 android:paddingTop="8dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_amiv_logo"
+                android:src="@drawable/ic_amiv_logo_white"
                 android:tint="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
