Added splash screen, started app intro
Lots of small changes due to renaming colors
Improved Login activity, better UI spacing, ability to skip in intro
Improved language changing and tested, change language in settings then restart activty
Logout moved to user info

--- a/app/src/main/res/layout/checkin_activity_member_list.xml
+++ b/app/src/main/res/layout/checkin_activity_member_list.xml
@@ -31,7 +31,7 @@
         android:focusable="true"
         android:onClick="RefreshListData"
         android:tint="@android:color/white"
-        app:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="@color/primary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_refresh_32dp" />
