--- a/app/src/main/res/layout/checkin_list_item_stat.xml
+++ b/app/src/main/res/layout/checkin_list_item_stat.xml
@@ -40,6 +40,6 @@
         android:id="@+id/dividerLine"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/colorLightGrey"
+        android:background="@color/lightGrey"
         app:layout_constraintBottom_toBottomOf="parent" />
 </android.support.constraint.ConstraintLayout>
