--- a/app/src/main/res/layout/core_list_item_keyval.xml
+++ b/app/src/main/res/layout/core_list_item_keyval.xml
@@ -37,7 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:alpha="0.5"
-        android:background="@color/colorAccent"
+        android:background="@color/accent"
         android:paddingLeft="8dp"
         android:paddingRight="8dp" />
 </LinearLayout>
