--- a/app/src/main/res/layout/events_list_item_event.xml
+++ b/app/src/main/res/layout/events_list_item_event.xml
@@ -57,7 +57,7 @@
                     android:gravity="top|start"
                     android:text="NEW\u0020"
                     android:textAppearance="@style/Subheader"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/primary"
                     android:textSize="12sp"
                     android:visibility="visible"
                     app:layout_constraintBottom_toBottomOf="@+id/titleField"
@@ -77,7 +77,7 @@
                 android:paddingLeft="16dp"
                 android:text="Event catchphrase"
                 android:textAppearance="@style/Body"
-                android:textColor="@color/textLightGray" />
+                android:textColor="@color/darkGrey" />
         </LinearLayout>
 
         <TextView
@@ -100,7 +100,7 @@
             android:gravity="right|center"
             android:paddingLeft="6dp"
             android:paddingRight="12dp"
-            android:tint="@color/colorYellow"
+            android:tint="@color/yellow"
             android:visibility="visible"
             app:srcCompat="@drawable/ic_pending" />
     </LinearLayout>
@@ -111,7 +111,7 @@
         android:layout_height="1dp"
         android:layout_marginEnd="4dp"
         android:layout_marginStart="4dp"
-        android:background="@color/colorAccentDark"
+        android:background="@color/accentDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
