--- a/app/src/main/res/layout/jobs_list_item_job.xml
+++ b/app/src/main/res/layout/jobs_list_item_job.xml
@@ -70,7 +70,7 @@
                     android:gravity="top|start"
                     android:text="NEW\u0020"
                     android:textAppearance="@style/Subheader"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/primary"
                     android:textSize="12sp"
                     android:visibility="visible"
                     app:layout_constraintBottom_toBottomOf="@+id/titleField"
@@ -89,7 +89,7 @@
                 android:paddingLeft="0dp"
                 android:text="Company"
                 android:textAppearance="@style/Body"
-                android:textColor="@color/textLightGray" />
+                android:textColor="@color/darkGrey" />
         </LinearLayout>
 
     </LinearLayout>
@@ -100,7 +100,7 @@
         android:layout_height="1dp"
         android:layout_marginEnd="4dp"
         android:layout_marginStart="4dp"
-        android:background="@color/colorAccentDark"
+        android:background="@color/accentDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
