--- a/app/src/main/res/layout/core_activity_intro.xml
+++ b/app/src/main/res/layout/core_activity_intro.xml
@@ -23,6 +23,7 @@
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonNext"
         app:layout_constraintTop_toBottomOf="@+id/logo" />
 
     <LinearLayout
