--- a/app/src/main/res/layout/core_activity_login.xml
+++ b/app/src/main/res/layout/core_activity_login.xml
@@ -141,6 +141,7 @@
             android:text="@string/login_prompt_email"
             android:textAppearance="@style/Subheader"
             android:textColor="@color/darkGrey"
+            android:textStyle="italic"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/submitLoginButton" />
