--- a/app/src/main/res/layout/core_intro_slide_language.xml
+++ b/app/src/main/res/layout/core_intro_slide_language.xml
@@ -8,7 +8,7 @@
     android:background="@color/primary">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -35,7 +35,7 @@
         android:background="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/title" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -65,11 +65,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:scaleX="2"
-                android:scaleY="2"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/line"
-                app:srcCompat="@mipmap/flag_de_64" />
+                android:cropToPadding="false"
+                android:scaleX=".5"
+                android:scaleY=".5"
+                app:srcCompat="@mipmap/ch" />
 
             <TextView
                 android:id="@+id/textView4"
@@ -77,7 +76,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="Deutsch"
+                android:textAlignment="center"
                 android:textColor="@android:color/white"
                 android:textSize="24sp" />
 
@@ -108,11 +109,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:scaleX="2"
-                android:scaleY="2"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/line"
-                app:srcCompat="@mipmap/flag_us_64" />
+                android:scaleX=".5"
+                android:scaleY=".5"
+                app:srcCompat="@mipmap/gb" />
 
             <TextView
                 android:id="@+id/textView3"
@@ -120,7 +119,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="English"
+                android:textAlignment="center"
                 android:textColor="@android:color/white"
                 android:textSize="24sp" />
 
