--- a/app/src/main/res/layout/core_intro_slide_pref_detail.xml
+++ b/app/src/main/res/layout/core_intro_slide_pref_detail.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:singleLine="false"
-        android:text="@string/intro_profile_title"
+        android:text="@string/pref_food_title"
         android:textAlignment="textStart"
         android:textAppearance="@style/Header"
         android:textColor="@android:color/white"
@@ -45,6 +45,7 @@
         app:layout_constraintTop_toBottomOf="@+id/line">
 
         <LinearLayout
+            android:id="@+id/listParent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -54,46 +55,6 @@
             android:paddingStart="16dp"
             android:paddingTop="16dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="8dp"
-                    android:layout_weight="1"
-                    android:text="@string/rfid_no"
-                    android:textAppearance="@style/Subheader"
-                    android:textColor="@android:color/white" />
-
-                <EditText
-                    android:id="@+id/rfidField"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:hint="@string/rfid"
-                    android:inputType="number"
-                    android:singleLine="true"
-                    android:textColor="@android:color/white" />
-
-            </LinearLayout>
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="@string/intro_rfid_hint"
-                android:textColor="@android:color/white"
-                android:textStyle="italic"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/submitLoginButton" />
 
         </LinearLayout>
     </ScrollView>
