--- a/app/src/main/res/layout/core_intro_slide_event_prefs.xml
+++ b/app/src/main/res/layout/core_intro_slide_event_prefs.xml
@@ -2,7 +2,6 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary">
@@ -80,7 +79,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_weight="1"
                     android:gravity="right|center_vertical"
-                    android:text="Set"
+                    android:text="@string/tap_to_set"
                     android:textColor="@android:color/white"
                     android:textSize="18sp" />
 
@@ -113,7 +112,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_weight="1"
                     android:gravity="right|center_vertical"
-                    android:text="Set"
+                    android:text="@string/tap_to_set"
                     android:textColor="@android:color/white"
                     android:textSize="18sp" />
 
