--- a/app/src/main/res/layout/core_intro_pref_other_field.xml
+++ b/app/src/main/res/layout/core_intro_pref_other_field.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:ems="10"
-    android:hint="Other"
+    android:hint="@string/other"
     android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
     android:selectAllOnFocus="false"
     android:singleLine="false"
