--- a/app/src/main/res/layout/events_list_item_event.xml
+++ b/app/src/main/res/layout/events_list_item_event.xml
@@ -3,13 +3,11 @@
 
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list_item_event_constraint"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:visibility="visible"
-    android:background="?attr/selectableItemBackground">
+    android:visibility="visible">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -55,7 +53,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:gravity="top|start"
-                    android:text="NEW\u0020"
+                    android:text="@string/new_caps"
                     android:textAppearance="@style/Subheader"
                     android:textColor="@color/primary"
                     android:textSize="12sp"
