--- a/app/src/main/res/layout/jobs_list_item_job.xml
+++ b/app/src/main/res/layout/jobs_list_item_job.xml
@@ -3,13 +3,11 @@
 
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list_item_event_constraint"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:visibility="visible"
-    android:background="?attr/selectableItemBackground">
+    android:visibility="visible">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -32,7 +30,7 @@
             app:srcCompat="@mipmap/amiv_logo" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
@@ -68,7 +66,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:gravity="top|start"
-                    android:text="NEW\u0020"
+                    android:text="@string/new_caps"
                     android:textAppearance="@style/Subheader"
                     android:textColor="@color/primary"
                     android:textSize="12sp"
