--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">156dp</dimen>
     <dimen name="company_logo_height_detail">80dp</dimen>
+
+    <dimen name="action_bar_height">56dp</dimen>
 </resources>
