--- a/app/src/main/res/layout/core_activity_main.xml
+++ b/app/src/main/res/layout/core_activity_main.xml
@@ -24,6 +24,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="?android:attr/windowBackground"
+            android:theme="@style/AmivTheme"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
